ConcurrentMark::cleanup leaks BitMaps if VerifyDuringGC is enabled

XMLWordPrintable

    • gc
    • b08

        The expected_region_bm and expected_card_bm BitMaps used by VerifyDuringGC are allocated on the c heap on each call to cleanup(). The destructor of BitMap does not free the memory unless free_in_destructor == true is set for the ArrayAllocator backing the BitMap

        Suggested fix is to allocate the Bitmaps on the resource area of the VMThread executing the safepoint.

              Assignee:
              Mikael Gerdin (Inactive)
              Reporter:
              Mikael Gerdin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: