8037958: ConcurrentMark::cleanup leaks BitMaps if VerifyDuringGC is enabled

Allocate temporary BitMaps in the VMThread's resource area

Reviewed-by: stefank, sjohanss